--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -18,11 +18,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Install pre-commit
-        run: pipx install pre-commit
-
       - name: Cache Pre-Commit
         uses: NathanVaughn/actions-pre-commit-cache@main
 
       - name: Run Pre-Commit Hooks
-        run: pre-commit run --all-files --color=always --show-diff-on-failure
+        run: pipx run pre-commit run --all-files --color=always --show-diff-on-failure
